Source/WebCore/html/HTMLFormElement.cpp
@@ -42,6 +42,7 @@
 #include "HTMLInputElement.h"
 #include "HTMLNames.h"
 #include "HTMLObjectElement.h"
+#include "HTMLParserIdioms.h"
 #include "HTMLTableElement.h"
 #include "NodeRareData.h"
 #include "Page.h"
@@ -631,20 +632,20 @@ bool HTMLFormElement::noValidate() const
     return hasAttributeWithoutSynchronization(novalidateAttr);
 }
 
-// FIXME: This function should be removed because it does not do the same thing as the
-// JavaScript binding for action, which treats action as a URL attribute. Last time I
-// (Darin Adler) removed this, someone added it back, so I am leaving it in for now.
 String HTMLFormElement::action() const
 {
-    return attributeWithoutSynchronization(actionAttr);
+    auto& value = attributeWithoutSynchronization(actionAttr);
+    if (value.isEmpty())
+        return document().url().string();
+    return document().completeURL(stripLeadingAndTrailingHTMLSpaces(value)).string();
 }
 
-void HTMLFormElement::setAction(const String &value)
+void HTMLFormElement::setAction(const String& value)
 {
     setAttributeWithoutSynchronization(actionAttr, value);
 }
 
-void HTMLFormElement::setEnctype(const String &value)
+void HTMLFormElement::setEnctype(const String& value)
 {
     setAttributeWithoutSynchronization(enctypeAttr, value);
 }
@@ -654,7 +655,7 @@ String HTMLFormElement::method() const
     return FormSubmission::Attributes::methodString(m_attributes.method());
 }
 
-void HTMLFormElement::setMethod(const String &value)
+void HTMLFormElement::setMethod(const String& value)
 {
     setAttributeWithoutSynchronization(methodAttr, value);
 }
